force-app/main/default/objects/Indicateur__c/Indicateur__c.object-meta.xml
<CustomObject>
    <label>Indicateur</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Numéro Indicateur</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicateurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>