force-app/main/default/objects/Indicateur__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Indicateurs</relationshipLabel>
    <relationshipName>Indicateurs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>