force-app/main/default/objects/Indicateur__c/fields/Indicateur__c.field-meta.xml
<CustomField>
    <fullName>Indicateur__c</fullName>
    <label>Indicateur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANCIENNB</fullName>
                <default>true</default>
                <label>ANCIENNB</label>
            </value>
            <value>
                <fullName>ANCIENRCJ</fullName>
            </value>
            <value>
                <fullName>ANCIENRCS</fullName>
            </value>
            <value>
                <fullName>ANCIENREJ</fullName>
            </value>
            <value>
                <fullName>ANCIENRES</fullName>
            </value>
            <value>
                <fullName>ANCIENRMJ</fullName>
            </value>
            <value>
                <fullName>ANCIENRMS</fullName>
            </value>
            <value>
                <fullName>PARTGEST</fullName>
            </value>
            <value>
                <fullName>STAGCES</fullName>
            </value>
            <value>
                <fullName>STAGESCSA</fullName>
            </value>
            <value>
                <fullName>STAGMAS</fullName>
            </value>
            <value>
                <fullName>TAXEPC</fullName>
            </value>
            <value>
                <fullName>TAXEVERS</fullName>
            </value>
            <value>
                <fullName>STAGBBA</fullName>
            </value>
            <value>
                <fullName>STAGMSC</fullName>
            </value>
            <value>
                <fullName>STAGGEP</fullName>
            </value>
            <value>
                <fullName>APPESC</fullName>
            </value>
            <value>
                <fullName>APPBBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>