force-app/main/default/objects/Indicateur__c/fields/Libelle__c.field-meta.xml
<CustomField>
    <fullName>Libelle__c</fullName>
    <label>libellé</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Indicateur__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mission Mastère Spécialisé</fullName>
            </value>
            <value>
                <fullName>Mission MBA</fullName>
            </value>
            <value>
                <fullName>Nombre d&apos;Anciens</fullName>
            </value>
            <value>
                <fullName>Promesse Taxe</fullName>
            </value>
            <value>
                <fullName>Recrutement ESC Junior</fullName>
            </value>
            <value>
                <fullName>Recrutement ESC Senior</fullName>
            </value>
            <value>
                <fullName>Recrutement Mastère Junior</fullName>
            </value>
            <value>
                <fullName>Recrutement Mastère Senior</fullName>
            </value>
            <value>
                <fullName>Recrutement MBA Diplômé</fullName>
            </value>
            <value>
                <fullName>Recrutement MBA Senior</fullName>
            </value>
            <value>
                <fullName>Stages ESC Application</fullName>
            </value>
            <value>
                <fullName>Versement Taxe</fullName>
            </value>
            <value>
                <fullName>Stages BBA</fullName>
            </value>
            <value>
                <fullName>Stages GEP</fullName>
            </value>
            <value>
                <fullName>Stages MSC</fullName>
            </value>
            <value>
                <fullName>Apprentis ESC</fullName>
            </value>
            <value>
                <fullName>Apprentis BBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>