force-app/main/default/objects/Indicateur__c/fields/UO__c.field-meta.xml
<CustomField>
    <fullName>UO__c</fullName>
    <label>UO</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Libelle__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>NB</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>