force-app/main/default/objects/Indicateur__c/fields/Valeur__c.field-meta.xml
<CustomField>
    <fullName>Valeur__c</fullName>
    <label>Valeur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>